--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,9 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile(
+            'junit:junit:4.12',
+            'org.codehaus.groovy:groovy-all:2.5.6',
+            'org.spockframework:spock-core:1.1-groovy-2.4'
+    )
 }
